AC_INIT(src/agg_arc.cpp) # give me a source file, any source file...
AM_INIT_AUTOMAKE(agg, 2.0.0)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_ISC_POSIX
AM_C_PROTOTYPES
if test "x$U" != "x"; then
  AC_MSG_ERROR(Compiler not ANSI compliant)
fi
AM_PROG_LIBTOOL
AC_PROG_INSTALL

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# We should check for X11 here, when compiling on Unix
AGG_PLATFORM="X11"
AGG_PLATFORM_INC="-I/usr/X11R6/include/"
AGG_PLATFORM_LIB="-L/usr/X11R6/lib -lX11"

AC_SUBST(AGG_PLATFORM)
AC_SUBST(AGG_PLATFORM_INC)
AC_SUBST(AGG_PLATFORM_LIB)

AC_OUTPUT(
   Makefile
   libagg.pc
   gpc/Makefile
   font_freetype/Makefile
   src/Makefile
   src/ctrl/Makefile
   src/platform/Makefile
   src/platform/X11/Makefile
   include/Makefile
   include/ctrl/Makefile
   include/util/Makefile
   include/platform/Makefile
   examples/Makefile
) 
